@@ -24,7 +24,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -57,11 +56,12 @@ public class SecurityConfig {
                 .and()
                 .authorizeHttpRequests(authorize -> authorize
                         .antMatchers(HttpMethod.GET, "/ws/chat/**").permitAll()
-                        .antMatchers(HttpMethod.POST, "/users").permitAll()
-                        .antMatchers(HttpMethod.PATCH, "/users/**").hasRole("USER")
-                        .antMatchers(HttpMethod.GET, "/users").hasRole("ADMIN")
-                        .antMatchers(HttpMethod.GET, "/users/**").hasAnyRole("USER", "ADMIN")
-                        .antMatchers(HttpMethod.DELETE, "/users/**").hasRole("USER")
+                        .antMatchers(HttpMethod.GET, "/api/users/duplicate-email").permitAll()
+                        .antMatchers(HttpMethod.POST, "/api/users").permitAll()
+                        .antMatchers(HttpMethod.PATCH, "/api/users/**").hasRole("USER")
+                        .antMatchers(HttpMethod.GET, "/api/users").hasRole("ADMIN")
+                        .antMatchers(HttpMethod.GET, "/api/users/**").hasAnyRole("USER", "ADMIN")
+                        .antMatchers(HttpMethod.DELETE, "/api/users/**").hasRole("USER")
                         .anyRequest().permitAll()                // 일단 허용
                 );
         return http.build();
@@ -76,8 +76,12 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));   // 모든 origin 허용
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "DELETE"));  // 허용 메소드 설정
+        configuration.setAllowedOriginPatterns(List.of("*"));   // 일단 테스트, 공식 문서에서는 좀 더 유연하다고 하는데... 뭔차이지?
+//        configuration.setAllowedOrigins(List.of("*"));   // 모든 origin 허용
+        configuration.setAllowedMethods(List.of("GET", "POST", "PATCH", "DELETE", "OPTIONS"));  // 허용 메소드 설정
+        configuration.setAllowedHeaders(List.of("*"));     // 요청 헤더 허용 설정
+        configuration.setAllowCredentials(true);        // 크레덴셜 지원 설정
+        configuration.setExposedHeaders(List.of("*"));       // 응답 헤더 허용 설정
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();   // CorsConfigurationSource 구현 클래스
         source.registerCorsConfiguration("/**", configuration);
@@ -91,7 +95,7 @@ public class SecurityConfig {
             AuthenticationManager authenticationManager = builder.getSharedObject(AuthenticationManager.class);
 
             JwtAuthenticationFilter jwtAuthenticationFilter = new JwtAuthenticationFilter(authenticationManager, jwtTokenizer);  // JwtAuthenticationFilter 를 생성하면서 JwtAuthenticationFilter 에서 사용되는 AuthenticationManager 와 JwtTokenizer 를 DI
-            jwtAuthenticationFilter.setFilterProcessesUrl("/auth/login");          // 로그인 url 변경
+            jwtAuthenticationFilter.setFilterProcessesUrl("/api/auth/login");          // 로그인 url 변경
 
             // 성공, 실패 핸들러 추가, 일반적으로 인증을 위한 필터마다 성공, 실패 구현 클래스를 각각 생성할거라 DI 하지 않아도 무방
             jwtAuthenticationFilter.setAuthenticationSuccessHandler(new UserAuthenticationSuccessHandler());
